[project]
name = "marketpulse"
version = "0.1.0"
description = "Multi-source equity-research agent with confidence-gated human-in-the-loop approval."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.4",
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "psycopg[binary]>=3.2",
    "streamlit>=1.40",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "mcp_servers", "reviewer_ui"]

[tool.pytest.ini_options]
testpaths = ["tests", "mcp_servers"]
